1999-01-21  James Henstridge  <james@daa.com.au>

	* examples/testgtk/testgtk.py (create_scrolled_windows): changed
	a call to GtkContainer.add to GtkScrolledWindow.add_with_viewport.

	* gtk.py (GtkPacker.add): Added defaults for the arguments.

1999-01-11  James Henstridge  <james@daa.com.au>

	* gtk.py (GtkProgress.get_current_percentage): fixed function call

	* gtk.py (GtkScrolledWindow): changed so it inherits from GtkBin
	instead of GtkContainer, to match changes in GTK.

	* GDK.py (DRAG_PROTO_ROOTWIN): Added the constant.

	* gtkmodule.c: forgot to include GTK_TYPE_DOUBLE in one of the GtkArg
	processing routines.  Also fixed a problem for events with a NULL
	window.

1998-12-24  James Henstridge  <james@daa.com.au>

	* gdkimlibmodule.c(_wrap_gdk_imlib_get_rgb_height): I accidentally
	returned rgb_width instead of rgb_height.  This bug report was from
	Osamu Tanimoto <tanimoto@rios.co.jp>.

1998-12-22  James Henstridge  <james@daa.com.au>

	* GtkExtra.py: modified the signal connect bit in the MenuFactory
	code so it is a bit more sane.

1998-12-21  James Henstridge  <james@daa.com.au>

	* pygtk.spec: updated version here as well.

	* README: updated required GTK version to 1.1.9

	* configure.in: Updated version for pygtk to 0.5.9, increased
	GTK version check to 1.1.9.

1998-12-20  James Henstridge  <james@daa.com.au>

	* gtkmodule.c, generate/gtkmisc.defs: moved gtk_preview_draw_row here
	because python's string conversion routines do not like nuls in a
	string, but you quite often want them in image data.

1998-12-17  James Henstridge  <james@daa.com.au>

	* examples/*/*.py: changed calls to GtkLabel.set to GtkLabel.set_text.
	
	* gtk.py: made changes to reflect those below.

	* generate/gtkbase.defs (gtk_widget_set_app_paintable): added this
	stub.

	* generate/gtkmisc.defs (gtk_label_set_text): renamed gtk_label_set to
	this, added gtk_label_set_line_wrap.

	* generate/gtkdnd.defs: Added gtk_drag_source_unset.
