@@ -1,3 +1,10 @@
+1999-01-22  James Henstridge  <james@daa.com.au>
+
+	* gdkimlibmodule.c: (_wrap_gdk_imlib_create_image_from_data): function
+	would raise an exception if there was a null in the data or alpha
+	arguments.  Also added some sanity checks on the lengths of data
+	and alpha.  This patch was submitted by Toby D. Reeves.
+
 1999-01-21  James Henstridge  <james@daa.com.au>
 
 	* examples/testgtk/testgtk.py (create_scrolled_windows): changed
